# ros2_rs_local_path_planner

./: CMakeLists.txt  package.xml
cfg/: local_path_planner.yaml
cfg/navigation_cfg/: navigation.ini
launch/: local_path_planner.launch.py
src/: local_path_planner.cpp
